--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ h5{
 .ratings i {
     color: #cecece;
     font-size: 15px;
-    font-weight: 300px;
+    font-weight: 400;
 }
 .rating-color {
     color: #fbc634 !important
